기초설정완료

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,3 +28,4 @@ where = src
 [options.entry_points]
 console_scripts =
     airflow_utils-ping = airflow_utils:ping
+    airflow_utils-bash = airflow_utils:gen_bash_task
